Further fix spacing of form

--- a/components/Form.module.css
+++ b/components/Form.module.css
@@ -10,6 +10,14 @@
     border-radius: 1rem;
 }
 
-.input {
+.heading {
+    margin-bottom: 10px;
+}
+
+.otherpage {
+    margin-top: 5px;
+}
+
+.input:not([name="confirmPassword"], [name="userPassword"]){
     margin-bottom: 1rem;
 }
